<resources>
    <string name="app_name">Social Application</string>
    <string name="creat_new_account">Creat new Account</string>
    <string name="welcome_to_chat_app">Social Application</string>
    <string name="log_out">Log Out</string>
    <string name="account_settings">Account Settings</string>
    <string name="all_users">All Users</string>
    <string name="create_account">Sign Up</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="Login">Sign in</string>
    <string name="login">Login</string>
</resources>
