<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login2"
    tools:context="com.example.hp.chating.RegisterActivity">

    <include
        android:id="@+id/regsiter_toolbar"
        layout="@layout/app_bar_layout"></include>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg_dsiplay_name"
        android:layout_width="350dp"
        android:layout_height="wrap_content"

        android:layout_marginLeft="20dp"
        android:layout_marginTop="200dp">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/enter_your_name" />
    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg_email"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_dsiplay_name"
        android:layout_marginLeft="20dp">
        >

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/reg_email"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_your_email" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/reg_password"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/reg_email"
        android:layout_marginLeft="20dp">
        >

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:hint="@string/enter_your_password" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/reg_create_btn"
        android:text="@string/create_account"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LoginPassword"
        android:layout_marginTop="500dp"
        android:layout_marginLeft="90dp"
        android:textColor="#000000"
        android:background="@drawable/shape"
        android:textAllCaps="false"
        />


</RelativeLayout>
